--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css"
     />
+    <style> 
+      * {
+        -webkit-user-select: none; /* Safari */
+        -ms-user-select: none; /* IE 10 and IE 11 */
+        user-select: none; /* Standard syntax */
+      }
+      </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -29,6 +36,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Interview Questions</title>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
